@startuml

class Manager
class ApproveAndRejectEnrollmentsUI {
    +doshow()
    +showAllUsers()
}

class ApproveAndRejectEnrollmentsController {
    +allStudents()
    +allRequests()
    +studentsCourseEnrollment()
    +approveStudentsEnrollment()
    +rejectStudentsEnrollment()
    +getEnrollmentCourses()
}


class CourseEnrollmentRequest {
    -course
    -student
    -enrollmentStatus
    -createdOn
    +approveEnrollment()
    +rejectEnrollment()
}

class StudentUserRepository{
    +findByUsername()
}

class ListCoursesService {
    +getEnrollmentCourses()
    +allCourses()
}

class ListStudentsService {
    +allUsers()
    +findAllStudents()
}

class CourseEnrollmentRequestRepository{
    +pendingCourseEnrollmentRequests()
    +findByStudentAndCourse()
    +save()
}

class CourseRepository {
    +save()
    +findAll()
}

class CourseEnrollmentRequestService{
    +getStudentEnrollment()
    +pendingCourseEnrollmentRequests()
}

class UserRepository{
    +findAll()
}

Manager --> ApproveAndRejectEnrollmentsUI
ApproveAndRejectEnrollmentsUI-->ApproveAndRejectEnrollmentsController
ApproveAndRejectEnrollmentsController-->ListCoursesService
ApproveAndRejectEnrollmentsController-->ListStudentsService
ListStudentsService-->UserRepository
ListStudentsService-->StudentUserRepository
ApproveAndRejectEnrollmentsController-->CourseEnrollmentRequestService
CourseEnrollmentRequestService-->CourseEnrollmentRequestRepository
ListCoursesService-->CourseRepository
ApproveAndRejectEnrollmentsController-->CourseEnrollmentRequest
ApproveAndRejectEnrollmentsController-->CourseEnrollmentRequestRepository
@enduml
